--- a/styles.css
+++ b/styles.css
@@ -14,3 +14,18 @@ body { color: deeppink;
 h1 {
     color: black;
 }
+
+#cabecera{ font-size: 18px;
+    color: white    ;
+    background: blue;
+    box-shadow: 0px 5px 30px 0px rgba(0,0,0,0.75);
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em;
+
+}
+
+
+img{
+    width: 45%;
+}
